Release 3.0.2:
  * Fixed vignette build issues.
  * Fixed some src/ bugs and static analysis complaints.

Release 3.0.1:
  * Disabled babble test.
  * Fixed many potential (and probably some actual) memory bugs (Heckendorf).
  * Fixed scan-build warning in src/phrase_table.c. Improved memory allocations.
  * Fixed several memory leaks in the babbler.
  * Disabled babble test (Solaris seed breakage issue).
  * Improved readme.

Release 3.0.0:
  * Allowing custom word separators. (Heckendorf)
  * Support for input text as a character vector with length > 1. (Heckendorf)
  * Add ngram_asweka() (Heckendorf)

Release 2.0.0:
  * Changed version numbering to Major.Minor.Patch.
  * Added get.phrasetable().
  * Added string.summary().
  * Now storing counts of the ngram itself.
  * Added concatenate() and charsplitter() utilities.
  * Added comparison to tau and benchmark in the vignette.
  * Improvements to the standalone library example programs.
  * Switched to roxygen2.

Release 1.4.0:
  * Added summary method to internal library.
  * Refactored library internals.
  * Registered native routines with R.

Release 1.3.0:
  * Added historical background to "About" tab in shiny demo.
  * Switched from C to R RNG for extra entropy in seeds.

Release 1.2.0:
  * Fixed segfault when n=1.
  * Fixed memory allocation bug in the babbler.
  * Added shiny demo.
  * Improved ngram printing output and options.

Release 1.1.0:
  * Fixed some package issues.
  * Clarified some statements in the vignette.

Release 1.0.0:
  * Fixed memory leaks and Windows crashes (sorry CRAN!).
  * Implemented markov generator.
  * Added PRNG.
  * Added R wrappers, some extractors.
  * n-gram processor added. (Heckendorf)