@@ -14,8 +14,7 @@ License: BSD 2-clause License + file LICENSE
 Depends:
     R (>= 3.0.0)
 Imports:
-    methods,
-    assertthat (>= 0.1)
+    methods
 LazyData: yes
 LazyLoad: yes
 NeedsCompilation: yes
@@ -29,6 +28,7 @@ BugReports: https://github.com/wrathematics/ngram/issues
 Collate:
     'ngram.r'
     'babble.r'
+    'checks.r'
     'concatenate.r'
     'getseed.r'
     'getters.r'
