@@ -24,7 +24,6 @@ exportMethods(ngram)
 exportMethods(print)
 exportMethods(show)
 exportMethods(wordcount)
-import(assertthat)
 import(methods)
 importFrom(stats,runif)
 useDynLib(ngram, ng_extract_ngrams, ng_extract_str, ng_print, ng_process, R_ngram_gen, R_ngram_get_seed, R_ngram_wordcount, R_ng_get_phrasetable, R_stringsummary, ng_asweka)
