@@ -19,7 +19,7 @@
 #'   R_ngram_gen, R_ngram_get_seed, R_ngram_wordcount,
 #'   R_ng_get_phrasetable, R_stringsummary, ng_asweka
 #' 
-#' @import methods assertthat
+#' @import methods
 #' 
 #' @name ngram-package
 #' @docType package
