@@ -35,11 +35,11 @@
 #' @export
 preprocess <- function(x, case="lower", remove.punct=FALSE, remove.numbers=FALSE, fix.spacing=TRUE)
 {
-  assert_that(is.string(x))
-  assert_that(is.string(case))
-  assert_that(is.scalar(remove.punct) && is.logical(remove.punct))
-  assert_that(is.scalar(remove.numbers) && is.logical(remove.numbers))
-  assert_that(is.scalar(fix.spacing) && is.logical(fix.spacing))
+  check.is.string(x)
+  check.is.string(case)
+  check.is.flag(remove.punct)
+  check.is.flag(remove.numbers)
+  check.is.flag(fix.spacing)
   
   
   ### Case
